nav bar updated and manage bookings index made

--- a/WebHotel/WebHotel/appsettings.json
+++ b/WebHotel/WebHotel/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebHotel-001B5752-FEAC-4794-8024-B931C851C313;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "UserSettings": {
+    "UserEmail": "admin@wsh.com",
+    "UserPassword":"P@ssw0rd"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
